k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: spring-boot-api
  name: spring-boot-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spring-boot-api
    spec:
      containers:
      - image: harbor.lab.khadilkar.net/demo/spring-boot-api
        name: spring-boot-api
        resources: {}
status: {}
